# dCTIDH-512sp

./: .gitignore
ffi/: ctidh512.h
main/: CMakeLists.txt
rust/ctidh2048/: Cargo.toml  README.md  build.rs
rust/ctidh2048/src/: lib.rs
rust/ctidh512/: Cargo.toml  README.md  build.rs
rust/ctidh512/src/: lib.rs
scripts/new_primes/genFiles/: autogen
scripts/new_primes/genSteps/: Makefile  Makefile.arm.inc  autogen  cpucycles.h  ctidh-2048.main  ctidh-512.main  ctidh.c  ctidh.h  ctidh512  ctidh_api.c  ctidh_demo.c  fp2048.S  fp2048_c.c  fp512.S  fp512_c.c  fp_inv2048.c  fp_inv512.c  fp_sqrt2048.c  fp_sqrt512.c  int32_sort_portable.c  primes.h  primes2048.c  randombytes.c  test.c  test2048  test512  test_pubkey_compare.c  test_pubkey_compare2048  test_pubkey_compare512  uintbig2048.S  uintbig2048_c.c  uintbig512.S  uintbig512_c.c
